# rfw-rs

./: .gitignore  Cargo.toml  LICENSE.md  README.md
backends/gfx/: Cargo.toml  build.rs
backends/gfx/shaders/: blit.frag  blit.vert  lights.glsl  mesh.vert  shadow_filter.comp  shadow_linear.frag  shadow_mesh.vert  shadow_mesh_anim.vert  shadow_perspective.frag
backends/gfx/src/: instances.rs  lib.rs  list.rs  skinning.rs  utils.rs
backends/gfx/src/cmd/: mod.rs
backends/gfx/src/light/: map.rs  mod.rs
backends/gfx/src/mem/: image.rs  managed.rs  mod.rs
backends/gfx/src/mesh/: anim.rs  mod.rs
backends/gfx/src/pipeline/: mod.rs  shader.rs
backends/gpu-rt/: Cargo.toml  README.md
backends/gpu-rt/shaders/: disney.glsl  intersection.glsl  lambert.glsl  ray_extend.comp  shade.comp  utils.glsl
backends/gpu-rt/src/: bind_group.rs  blue_noise.rs  lib.rs  mem.rs
backends/metal/: Cargo.toml  build.rs
backends/metal/cpp/src/: buffer.hpp  instance_list.h  library.h  library.mm  renderer.mm  shaders.air  shaders.metal  utils.hpp
backends/metal/shaders/: shaders.metal
backends/metal/src/: ffi.rs  lib.rs  list.rs
backends/metal/src/mem/: mod.rs
backends/metal/src/objects/: d2.rs  d3.rs  mod.rs
backends/rendy/: Cargo.toml
backends/rendy/shaders/: material.glsl
backends/rendy/src/: lib.rs
backends/vulkan/: Cargo.toml  build.rs
backends/vulkan/shaders/: mesh.frag  mesh.vert  structs.glsl
backends/vulkan/src/: lib.rs  list.rs  pipeline.rs  pipeline_2d.rs  structs.rs  texture_list.rs  util.rs
backends/vulkan/src/memory/: buffer.rs  image.rs  mod.rs
backends/vulkan_rt/: .gitignore  Cargo.toml  build.rs
backends/vulkan_rt/cpp/: .clang-format  CMakeLists.txt
backends/vulkan_rt/cpp/src/: create_metal_layer.h  create_metal_layer.mm  device.cpp  device.h  instance_list.h  library.cpp  library.h  renderer.cpp  renderer.h  renderer.hpp  structs.h  vertex_list.h  vk_mem_alloc.cpp  vulkan_loader.cpp  vulkan_loader.h
backends/vulkan_rt/shaders/: 3d.frag  3d.vert
backends/vulkan_rt/src/: ffi.rs  lib.rs
backends/wgpu/: Cargo.toml  README.md  build.rs
backends/wgpu/shaders/: 2d.frag  2d.vert  2d_list.frag  2d_list.vert  culling.comp  deferred.frag  deferred_fxaa.frag  disney_bsdf.glsl  lighting.comp  lights.glsl  mesh.vert  mesh_anim.vert  quad.vert  shadow_cube.vert  shadow_filter.comp  shadow_single.vert  shadow_single_anim.vert  shadow_single_linear.frag  skinning.comp  ssao.comp  ssao_filter.comp
backends/wgpu/src/: d2.rs  gui.rs  imgui.rs  instance.rs  lib.rs  light.rs  list.rs  mat.rs  mem.rs  mesh.rs  output.rs  pass.rs  pipeline.rs  skin.rs
crates/rfw-backend/: Cargo.toml
crates/rfw-backend/src/: lib.rs  lights.rs  structs.rs
crates/rfw-ecs/: Cargo.toml
crates/rfw-ecs/src/: lib.rs
crates/rfw-font/: Cargo.toml
crates/rfw-font/src/: lib.rs
crates/rfw-graph/: Cargo.toml
crates/rfw-graph/src/: lib.rs  node.rs
crates/rfw-math/: Cargo.toml
crates/rfw-math/src/: lib.rs
crates/rfw-scene/: Cargo.toml
crates/rfw-scene/src/: constants.rs  instances.rs  instances_2d.rs  instances_3d.rs  intersector.rs  lib.rs  utils.rs
crates/rfw-scene/src/camera/: frustrum.rs  mod.rs
crates/rfw-scene/src/graph/: mod.rs  node.rs
crates/rfw-scene/src/lights/: mod.rs
crates/rfw-scene/src/loaders/: mod.rs  (+2 more)
crates/rfw-utils/: Cargo.toml
crates/rfw-utils/src/: collections.rs  input.rs  lib.rs  log.rs  task.rs  track.rs
examples/animated/: Cargo.toml
examples/animated-metal/: Cargo.toml
examples/animated-metal/src/: main.rs
examples/animated-wgpu/: Cargo.toml
examples/animated-wgpu/src/: main.rs
examples/animated/src/: main.rs
examples/nphysics/: Cargo.toml
examples/nphysics/src/: main.rs
examples/physics/: Cargo.toml
examples/physics/src/: main.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
renderers/cpu-rt/: Cargo.toml  README.md
renderers/cpu-rt/shaders/: quad.vert
renderers/cpu-rt/src/: main.rs  renderer.rs  surface.rs
renderers/deferred/: Cargo.toml  README.md  build.rs
renderers/deferred/examples/: cesium_man.rs
renderers/deferred/shaders/: 2d.frag  2d.vert  deferred.frag  deferred_blit.frag  lighting.comp  material.glsl  mesh_anim.vert  quad.frag  random.glsl  shadow_filter.frag  shadow_single.frag  shadow_single.vert  shadow_single_anim.vert  ssao.comp  ssao_filter.comp
renderers/deferred/src/: d2.rs  instance.rs  lib.rs  light.rs  main.rs  mesh.rs  output.rs  pass.rs  pipeline.rs  skin.rs
renderers/gfx/: Cargo.toml
renderers/gfx/shaders/: mesh.frag  mesh.vert  mesh_anim.vert  shadow_mesh.vert  shadow_mesh_anim.vert
renderers/gfx/src/: instances.rs  lib.rs  materials.rs  skinning.rs
renderers/gpu-rt/: Cargo.toml  README.md
renderers/gpu-rt/shaders/: bindings.glsl  blit.comp  disney.glsl  intersection.glsl  random.glsl  ray_extend.comp  ray_gen.comp  ray_shadow.comp  shade-reference.comp  shade.comp  structs.glsl  utils.glsl
renderers/gpu-rt/src/: bind_group.rs  lib.rs  main.rs  mem.rs
renderers/metal-rt/: Cargo.toml
renderers/metal-rt/shaders/: shaders.metal
renderers/metal-rt/src/: main.rs  renderer.rs
renderers/vulkan/: Cargo.toml  README.md
renderers/vulkan/shaders/: quad.frag  quad.vert
renderers/vulkan/src/: helpers.rs  lib.rs  main.rs
rfw/: Cargo.toml
rfw/src/: backend.rs  lib.rs  window.rs
rfw/src/ecs/: mod.rs
rfw/src/event/: mod.rs
rfw/src/input/: mod.rs
rfw/src/resources/: mod.rs  storage.rs
rfw/src/scene/: intersector.rs  mod.rs
rfw/src/system/: mod.rs
rfw/src/utils/: collections.rs  mod.rs  task.rs
scene/: Cargo.toml
scene/src/: constants.rs  graph.rs  intersector.rs  lib.rs  renderer.rs  scene.rs  triangle_scene.rs  utils.rs
scene/src/camera/: frustrum.rs  mod.rs
scene/src/graph/: animation.rs  mod.rs
scene/src/lights/: mod.rs
scene/src/loaders/: gltf.rs  mod.rs  obj.rs
scene/src/material/: list.rs  mod.rs
scene/src/objects/: instance.rs  mesh.rs  mod.rs  obj.rs  plane.rs  quad.rs  sphere.rs  triangle.rs
scene/src/r2d/: mod.rs
scene/src/renderers/: mod.rs
utils/: Cargo.toml
utils/src/: collections.rs  lib.rs  task.rs
(+152 files in other folders)
