[workspace]
members = [
    "rfw",
    "examples/animated-wgpu",
   "examples/animated-metal",
    "examples/d2",
    "examples/nphysics",
    "backends/wgpu",
    "backends/gfx",
#    "backends/metal",
   "backends/metal-cpp",
    "backends/vulkan",
    "crates/rfw-backend",
    "crates/rfw-scene",
    "crates/rfw-math",
    "crates/rfw-utils",
    "crates/rfw-font",
    #"renderers/gpu-rt",
]

[profile.release]
debug = true
