[workspace]
members = [
    "rfw",
    "examples/animated",
    "examples/d2",
    "examples/nphysics",
    "backends/wgpu",
#    "backends/metal",
    "crates/rfw-backend",
    "crates/rfw-scene",
    "crates/rfw-math",
    "crates/rfw-utils",
    "crates/rfw-font",
    #"renderers/gpu-rt",
]

[profile.release]
debug = true

[profile.dev.package."*"]
opt-level = 1
