[workspace]
members = [
    "rfw",
    "examples/animated",
    "examples/d2",
    "examples/nphysics",
    "backends/wgpu",
    #    "backends/metal",
    "backends/vulkan_rt",
    "crates/rfw-backend",
    "crates/rfw-scene",
    "crates/rfw-math",
    "crates/rfw-utils",
    "crates/rfw-font",
    #"renderers/gpu-rt",
]

[profile.release]
debug = true
