[package]
authors = ["Mèir Noordermeer <meirnoordermeer@me.com>"]
description = "Rendering framework for implementing new rendering algorithms and creating graphics applications."
edition = "2018"
license = "Apache-2.0"
name = "rfw"
repository = "https://github.com/meirbon/rfw-rs"
version = "0.1.0"

[dependencies]
downcast-rs = "1.2.0"
rand = {version = "0.8", features = ["small_rng"]}
rayon = "1.5"
rfw-backend = {path = "../crates/rfw-backend"}
rfw-math = {path = "../crates/rfw-math"}
rfw-scene = {path = "../crates/rfw-scene"}
rfw-utils = {path = "../crates/rfw-utils"}
serde = {version = "1.0", features = ["derive"], optional = true}
crossbeam = "0.8"