[package]
authors = ["Mèir Noordermeer <meirnoordermeer@me.com>"]
description = "Rendering framework for implementing new rendering algorithms and creating graphics applications."
edition = "2018"
license = "Apache-2.0"
name = "rfw"
repository = "https://github.com/meirbon/rfw-rs"
version = "0.2.0"

[dependencies]
downcast-rs = "1.2.0"
rand = { version = "0.8", features = ["small_rng"] }
rayon = "1.5"
rfw-backend = { path = "../crates/rfw-backend", version = "0.2" }
rfw-math = { path = "../crates/rfw-math", version = "0.2" }
rfw-scene = { path = "../crates/rfw-scene", version = "0.2" }
rfw-utils = { path = "../crates/rfw-utils", version = "0.2" }
serde = { version = "1.0", features = ["derive"], optional = true }
crossbeam = "0.8"
bevy_ecs = "0.5"
bevy_tasks = "0.5"
winit = "0.25"
env_logger = "0.8"