[package]
name = "rfw-scene"
version = "0.1.0"
authors = ["Mèir Noordermeer <meirnoordermeer@me.com>"]
edition = "2018"

[dependencies]
tobj = "1.0"
rayon = "1.5.0"
num_cpus = "1.13"
serde = { version = "1.0", features = ["derive"], optional = true }
bincode = "1.3"
futures = "0.3"
rand = { version = "0.7", features = ["small_rng"] }
raw-window-handle = "0.3"
gltf = { version = "0.15", features = ["extras", "names", "utils"] }
mimalloc = "0.1.19"
rfw-utils = { path = "../utils", features = ["serde"] }

[features]
default = []
