[package]
name = "rfw-utils"
version = "0.1.0"
authors = ["Mèir Noordermeer <meirnoordermeer@me.com>"]
edition = "2018"

[dependencies]
crossbeam = "0.8"
threadpool = "1.8.1"
num_cpus = "1.13.0"
owning_ref = "0.4"
bitvec = { version = "0.19", features = ["serde"] }
serde = { version = "1.0", features = ["derive"], optional = true }
glam = { version = "0.11", features = ["serde"] }
l3d = { version = "0.1", features = ["serde"] }
rtbvh = "0.1.1"

[features]
default = []
