[package]
authors = ["Mèir Noordermeer <meirnoordermeer@me.com>"]
build = "build.rs"
edition = "2018"
name = "rfw-backend-gfx"
version = "0.1.0"

[dependencies]
futures = "0.3"
gfx-backend-vulkan = {version = "0.6", features = ["x11"]}
gfx-hal = "0.6"
nalgebra = "0.23"
rfw = {path = "../../rfw"}

[build-dependencies]
rfw = {path = "../../rfw"}
spirv-compiler = "0.1"
