[package]
authors = ["Mèir Noordermeer <meirnoordermeer@me.com>"]
build = "build.rs"
edition = "2018"
name = "rfw-backend-gfx"
version = "0.1.0"

[dependencies]
futures = "0.3"
rendy = { version = "0.5", features = ["base", "vulkan"], default-features = false }
nalgebra = "0.25"
rfw = { path = "../../rfw" }
num-integer = "0.1"

[build-dependencies]
rfw = { path = "../../rfw" }
spirv-compiler = "0.1"
