[package]
name = "rfw-gpu-rt"
version = "0.1.0"
authors = ["meir"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
rayon = "1.5"
rand = { version = "0.8", features = ["small_rng"] }
num = "0.4"
crossbeam = "0.8"
wgpu = "0.6"
futures = "0.3"
rfw = { path = "../../rfw" }

[build-dependencies]
rfw = { path = "../../rfw" }
