[package]
authors = ["Mèir Noordermeer <meirnoordermeer@me.com>"]
edition = "2018"
name = "rfw-backend-rendy"
version = "0.1.0"

[dependencies]
futures = "0.3"
rendy = { version = "0.5.1", features = ["base"], default-features = false }
rfw-backend = { path = "../../crates/rfw-backend" }
rfw-math = { path = "../../crates/rfw-math" }
