[package]
name = "rfw-backend-vulkan"
version = "0.1.0"
authors = ["Mèir Noordermeer <meirnoordermeer@me.com>"]
edition = "2018"

[features]
default = ["validation"]
validation = []

[dependencies]
futures = "0.3"
num_cpus = "1.13"
rfw = { path = "../../rfw" }
rayon = "1.5"
ash = "0.32"
ash-window = "0.6"
vk-mem = "0.2"
num-integer = "0.1"
bytemuck = "1.5"

[build-dependencies]
spirv-compiler = "0.1"
