[package]
authors = ["Mèir Noordermeer <meirnoordermeer@me.com>"]
edition = "2018"
name = "rfw-backend-vulkan-rt"
description = "A Vulkan-based ray-traced backend for rfw."
version = "0.1.0"
build = "build.rs"
license = "Apache-2.0"
repository = "https://github.com/meirbon/rfw-rs"

[dependencies]
rfw = { path = "../../rfw", version = "0.2" }
num-integer = "0.1"

[build-dependencies]
cc = "1.0"
bindgen = "0.58"
md5 = "0.7"
