[package]
authors = ["meir"]
build = "build.rs"
description = "A wgpu-based backend for rfw."
edition = "2018"
license = "Apache-2.0"
name = "rfw-backend-wgpu"
repository = "https://github.com/meirbon/rfw-rs"
version = "0.2.0"

[dependencies]
futures = "0.3"
num_cpus = "1.13"
rfw = { path="../../rfw", version="0.2" }
wgpu = { version="0.9", features=["cross"] }
rayon = "1.5"
num-integer = "0.1"
bitflags = "1.2"
# rfw = "0.1"

[build-dependencies]
rfw = { path="../../rfw" }
# rfw = "0.1"
spirv-compiler = "0.1"

[features]
default = []
