[package]
authors = ["Mèir Noordermeer <meirnoordermeer@me.com>"]
edition = "2018"
name = "rfw-backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw-window-handle = "0.3"
rfw-scene = {path = "../rfw-scene"}
rfw-utils = {path = "../rfw-utils"}
l3d = "0.1"