[package]
authors = ["Mèir Noordermeer <meirnoordermeer@me.com>"]
edition = "2018"
name = "rfw-backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
l3d = "0.1"
raw-window-handle = "0.3"
rfw-math = {path = "../rfw-math"}
bitvec = "0.21"
rtbvh = "0.1"
serde = {version = "1.0", optional = true}
rayon = "1.5"