[package]
authors = ["Mèir Noordermeer <meirnoordermeer@me.com>"]
edition = "2018"
name = "rfw-backend"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
l3d = "0.3"
raw-window-handle = "0.3"
rfw-math = { path = "../rfw-math", version = "0.2" }
bitvec = "0.22"
rtbvh = "0.6"
serde = { version = "1.0", optional = true }
rayon = "1.5"
bitflags = "1.2"
