[package]
name = "rfw-ecs"
version = "0.1.0"
authors = ["Mèir Noordermeer <meirnoordermeer@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5"
crossbeam = "0.8"
downcast-rs = "1.2.0"
rfw-utils = { path = "../rfw-utils/" }
