[package]
name = "rfw-font"
authors = ["Mèir Noordermeer <meirnoordermeer@me.com>"]
version = "0.2.0"
description = "Font rendering plugin for rfw."
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfw = { path = "../../rfw", version = "0.2" }
glyph_brush = "0.7"