[package]
authors = ["Mèir Noordermeer <meirnoordermeer@me.com>"]
edition = "2018"
name = "rfw-math"
description = "Math utilities used in rfw."
license = "Apache-2.0"
version = "0.2.0"
repository = "https://github.com/meirbon/rfw-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = ">=0.17"
serde = { version = "1.0", optional = true }