[package]
authors = ["Mèir Noordermeer <meirnoordermeer@me.com>"]
edition = "2018"
name = "rfw-scene"
version = "0.1.0"

[dependencies]
bitvec = "0.20"
gltf = {version = "0.15", features = ["extras", "names", "utils"]}
l3d = "0.1"
rayon = "1.5"
rfw-math = {path = "../rfw-math"}
rfw-utils = {path = "../rfw-utils"}
rtbvh = "0.1"
serde = {version = "1.0", features = ["derive"], optional = true}
tobj = "1.0"
