[package]
authors = ["Mèir Noordermeer <meirnoordermeer@me.com>"]
edition = "2018"
name = "rfw-scene"
version = "0.1.0"

[dependencies]
bitflags = "1.2.1"
bitvec = "0.22"
l3d = "0.2"
rayon = "1.5"
rfw-backend = {path = "../rfw-backend"}
rfw-math = {path = "../rfw-math"}
rfw-utils = {path = "../rfw-utils"}
rtbvh = "0.5"
serde = {version = "1.0", features = ["derive"], optional = true}
tobj = "3.0"
