[package]
authors = ["Mèir Noordermeer <meirnoordermeer@me.com>"]
edition = "2018"
name = "rfw-scene"
description = "Scene implementation used in rfw."
version = "0.2.0"
license = "Apache-2.0"
repository = "https://github.com/meirbon/rfw-rs"

[dependencies]
bitflags = "1.2.1"
bitvec = "0.22"
l3d = "0.3"
rayon = "1.5"
rfw-backend = { path="../rfw-backend", version="0.2" }
rfw-math = { path="../rfw-math", version="0.2" }
rfw-utils = { path="../rfw-utils", version="0.2" }
rtbvh = "0.6"
serde = { version="1.0", features=["derive"], optional=true }
tobj = "3.0"
