[package]
name = "rfw-utils"
version = "0.2.0"
description = "Utils for the rfw framework."
license = "Apache-2.0"
authors = ["Mèir Noordermeer <meirnoordermeer@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8"
threadpool = "1.8"
futures = "0.3"
bitvec = "0.22"
num = "0.4"
num_cpus = "1.13"
chrono = "0.4"
terminal_color_builder = "0.1.1"
log = "0.4"
simple_logger = "1.11"