[package]
name = "animated-metal"
version = "0.1.0"
authors = ["Mèir Noordermeer <meirnoordermeer@me.com>"]
edition = "2018"

[features]
default = ["vulkan"]
vulkan = ["rfw-backend-vulkan"]
metal = ["rfw-backend-metal"]

[dependencies]
winit = "0.24"
futures = "0.3"
clap = "2.33"
glyph_brush = "0.7.0"
rayon = "1.5"
rfw = { path = "../../rfw" }
rfw-backend-vulkan = { path = "../../backends/vulkan", optional = true }
rfw-backend-metal = { path = "../../backends/metal", optional = true }
rfw-font = { path = "../../crates/rfw-font" }