[package]
name = "animated"
version = "0.1.0"
authors = ["Mèir Noordermeer <meirnoordermeer@me.com>"]
edition = "2018"

[dependencies]

futures = "0.3"
rayon = "1.5"
rfw = { path = "../../rfw" }
rfw-backend-wgpu = { path = "../../backends/wgpu" }
rfw-font = { path = "../../crates/rfw-font" }
rand = "0.8"