[package]
name = "animated"
version = "0.1.0"
authors = ["Mèir Noordermeer <meirnoordermeer@me.com>"]
edition = "2018"

[dependencies]
winit = "0.23"
futures = "0.3"
clap = "2.33"
glyph_brush = "0.7.0"
rayon = "1.5"
rfw = { path = "../../rfw" }
rfw-backend-wgpu = { path = "../../backends/wgpu" }
rfw-backend-gfx = { path = "../../backends/gfx" }
