[package]
name = "nphysics"
version = "0.1.0"
authors = ["Mèir Noordermeer <meirnoordermeer@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.23"
futures = "0.3"
clap = "2.33"
nphysics3d = "0.18"
rfw-utils = { path = "../../utils" }
rfw-system = { path = "../../system" }
rfw-deferred = { path = "../../renderers/deferred" }
rfw-gpu-rt = { path = "../../renderers/gpu-rt" }
shared = { path = "../../renderers/shared" }
