[package]
name = "simple"
version = "0.1.0"
authors = ["Mèir Noordermeer <meirnoordermeer@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.23"
futures = "0.3"
clap = "2.33.1"
rfw-utils = { path = "../../utils" }
rfw-system = { path = "../../system" }
rfw-deferred = { path = "../../renderers/deferred" }
rfw-gfx = { path = "../../renderers/gfx" }
shared = { path = "../../renderers/shared" }
