[package]
name = "cpu-rt"
version = "0.1.0"
authors = ["meir"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.22"
rayon = "1.3"
num_cpus = "1.13"
glam = "0.9.2"
rand = { version = "0.7", features = ["small_rng"] }
tobj = "2.0"
num = "0.2"
crossbeam = "0.7"
wgpu = "0.5"
futures = "0.3"
wgpu_glyph = "0.9"
rtbvh = { git = "https://github.com/MeirBon/rtbvh.git" }
rfw-system = { path = "../../system" }
shared = { path = "../shared" }

[build-dependencies]
shared = { path = "../shared" }
