[package]
name = "rfw_deferred"
version = "0.1.0"
authors = ["meir"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtbvh = { git = "https://github.com/MeirBon/rtbvh.git" }
scene = { path = "../../scene" }
shared = { path = "../shared" }
rayon = "1.3"
num_cpus = "1.13"
glam = "0.8"
rand = "0.7"
tobj = "2.0"
num = "0.2"
crossbeam = "0.7"
wgpu = "0.5"
futures = "0.3"
wgpu_glyph = "0.9"

[build-dependencies]
shared = { path = "../shared" }
