[package]
name = "rfw-deferred"
version = "0.1.0"
authors = ["meir"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtbvh = { git = "https://github.com/MeirBon/rtbvh.git" }
rfw-scene = { path = "../../scene" }
shared = { path = "../shared" }
rayon = "1.3"
num_cpus = "1.13"
glam = "0.9.2"
rand = "0.7"
tobj = "2.0"
num = "0.2"
crossbeam = "0.7"
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs.git", rev = "7da7058d32280499681100f3308daa16a54db5fc" }
futures = "0.3"
rfw-utils = { path = "../../utils" }

[build-dependencies]
shared = { path = "../shared" }
