[package]
name = "rfw-deferred"
version = "0.1.0"
authors = ["meir"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtbvh = { git = "https://github.com/MeirBon/rtbvh.git" }
rfw-scene = { path = "../../scene" }
shared = { path = "../shared" }
rayon = "1.5"
num_cpus = "1.13"
rand = "0.7"
tobj = "2.0"
num = "0.3"
crossbeam = "0.8"
wgpu = "0.6"
futures = "0.3"
rfw-utils = { path = "../../utils" }

[build-dependencies]
shared = { path = "../shared" }
