[package]
name = "rfw_gfx"
version = "0.1.0"
authors = ["Mèir Noordermeer <meirnoordermeer@me.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.21"
gfx-hal = "0.5"
glam = "0.9.2"
gfx-backend-vulkan = "0.5"
rfw_scene = { path = "../../scene" }
shared = { path = "../shared" }

[features]
default = []
dx12 = ["gfx-backend-dx12"]

# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# env_logger = "0.6"
# glsl-to-spirv = "0.1.4"

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# wasm-bindgen = "0.2.55"
# console_error_panic_hook = "0.1.6"
# console_log = "0.1.2"

# [target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
# version = "0.3.6"
# features = [ "console", "Document", "Element", "HtmlElement", "Node", "Window" ]

[target.'cfg(any(target_os = "windows", target_os = "unix"))'.dependencies.gfx-backend-vulkan]
version = "0.5"
features = ["x11"]

[target.'cfg(any(target_os = "macos", all(target_os = "ios", target_arch = "aarch64")))'.dependencies.gfx-backend-metal]
version = "0.5"

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "0.5"
optional = true

[build-dependencies]
shared = { path = "../shared" }
