[package]
name = "rfw-gpu-rt"
version = "0.1.0"
authors = ["meir"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
rayon = "1.3"
glam = "0.9.2"
rand = { version = "0.7", features = ["small_rng"] }
num = "0.2"
crossbeam = "0.7"
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs.git", rev = "471d2a1a48c795a13d3c65a29ff184d7cfe9e766" }
futures = "0.3"
rtbvh = { git = "https://github.com/MeirBon/rtbvh.git" }
rfw-scene = { path = "../../scene" }

[build-dependencies]
shared = { path = "../shared" }
