[package]
name = "metal-rt"
version = "0.1.0"
authors = ["Mèir Noordermeer <meirnoordermeer@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metal = "0.18"
cocoa = "0.20"
core-graphics = "0.19"
objc = "0.2"
glam = "0.8"
winit = "0.22"
scene = { path = "../../scene" }
shared = { path = "../shared" }